--- a/templates/selio/assets/css/custom.css
+++ b/templates/selio/assets/css/custom.css
@@ -5174,10 +5174,10 @@ div.form-group .winter_dropdown_tree button:first-child {
   .winter_dropdown_tree
   button.btn.btn-default.dropdown-toggle,
 .top-search div.form-group .winter_dropdown_tree button:first-child {
-  color: #7e7f82;
+  /* color: #7e7f82;
   font-size: 14px;
   font-family: Poppins;
-  font-weight: 500;
+  font-weight: 500; */
 }
 
 .property-thumb-imgs > .thumb-carous > .property-img {
