--- a/templates/selio/assets/css/style.css
+++ b/templates/selio/assets/css/style.css
@@ -170,8 +170,7 @@ h6 {
 }
 
 p {
-  font-family: "Raleway", sans-serif;
-  font-size: 13px;
+  font-size: 14px;
   line-height: 24px;
 }
 
@@ -622,11 +621,18 @@ header.pb .menu-button span {
 
 .banner-content h2,
 .banner-content h1 {
-  font-size: 44px;
   text-align: center;
   font-weight: 600;
   margin-top: 30px;
   margin-bottom: 15px;
+}
+
+.banner-content h1 {
+  font-size: 44px;
+}
+
+.banner-content h2 {
+  font-size: 30px;
 }
 
 .banner.hp2 {
@@ -686,7 +692,7 @@ header.pb .menu-button span {
 
 .banner-search .btn {
   border-radius: 0;
-  margin: 7px 0px;
+  margin: 6px 0px 0px;
   padding: 0 36px;
   height: 51px;
   line-height: 51px;
@@ -5549,8 +5555,7 @@ header.pb .header .navbar-nav .submit-btn a:hover {
   float: left;
   width: 100%;
   border: 1px solid #e0e1e6;
-  border-top: 0;
-  padding: 17px 23px 23px 23px;
+  padding: 15px;
 }
 
 .agent_info > h3 {
