--- a/templates/selio/assets/css/style.css
+++ b/templates/selio/assets/css/style.css
@@ -20,7 +20,7 @@
 /* ================================================================================== 
 Basic Elements Css
 ===================================================================================== */
-@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;700&display=swap");
 
 html,
 body,
@@ -129,7 +129,7 @@ section {
 
 body {
   /* font-family: "Poppins"; */
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: "Noto Sans KR", sans-serif;
   color: #aeb4b6;
   font-size: 14px;
   font-weight: 400;
