--- a/templates/selio/assets/css/responsive.css
+++ b/templates/selio/assets/css/responsive.css
@@ -736,10 +736,17 @@
     width: 50%;
     padding: 0 10px;
   }
+
   .banner-search {
     height: auto;
     border-radius: inherit;
     background: inherit;
+  }
+
+  .banner-search .form-group {
+    color: #fff;
+    text-shadow: 0px 0px 6px rgb(0 0 0 / 70%);
+
   }
   .banner-search .form-control {
     margin: 0;
